--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+      }
+      html,
+      body{
+        overflow: hidden;
+      }
+      #app{
+        position: fixed;
+        top: 0;
+        left: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
